# 1c_university_platform

./: README.md  clear.bat  config.json  pyproject.toml  reinstall.bat
app/: config.py  main.py
